--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logseq-plugin-wrap",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "main": "dist/index.html",
   "logseq": {
     "id": "_sethyuan-logseq-wrap",
@@ -12,7 +12,9 @@
     "serve": "wmr serve"
   },
   "dependencies": {
-    "@logseq/libs": "^0.0.1-alpha.34"
+    "@logseq/libs": "^0.0.1-alpha.34",
+    "preact": "^10.6.4",
+    "rambdax": "^8.0.0"
   },
   "devDependencies": {
     "wmr": "^3.7.2"
