--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "icon": "./icon.png"
   },
   "scripts": {
-    "start": "wmr",
-    "build": "wmr build",
-    "serve": "wmr serve"
+    "build": "rollup -c",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
     "@logseq/libs": "^0.0.1-alpha.35",
@@ -17,6 +16,10 @@
     "rambdax": "^8.0.0"
   },
   "devDependencies": {
-    "wmr": "^3.7.2"
+    "@rollup/plugin-html": "^0.2.4",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@swc/core": "^1.2.187",
+    "rollup": "^2.74.1",
+    "rollup-plugin-swc3": "^0.3.0"
   }
 }
