--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logseq-plugin-wrap",
-  "version": "0.4.3",
+  "version": "0.4.5",
   "main": "dist/index.html",
   "logseq": {
     "id": "_sethyuan-logseq-wrap",
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@logseq/libs": "^0.0.1-alpha.35",
+    "logseq-l10n": "^0.1.0",
     "preact": "^10.6.4",
     "rambdax": "^8.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-html": "^0.2.4",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@swc/core": "^1.2.187",
     "rollup": "^2.74.1",
