--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logseq-plugin-wrap",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "main": "dist/index.html",
   "logseq": {
     "id": "_sethyuan-logseq-wrap",
@@ -11,7 +11,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@logseq/libs": "^0.0.1-alpha.35",
+    "@logseq/libs": "^0.0.14",
     "logseq-l10n": "^0.2.0",
     "preact": "^10.6.4",
     "rambdax": "^8.0.0"
